--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: [Awangga Training Center]
-description: [Knowledge Sharing Public Repository on Intellegence]
+title: Awangga Training Center
+description: Knowledge Sharing Public Repository on Intellegence
 
-show_downloads: [true]
+show_downloads: true
 google_analytics: [Your Google Analytics tracking ID]
 
